--- a/Therefore.Web/Views/Game/Play.cshtml
+++ b/Therefore.Web/Views/Game/Play.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Play";
 }
 
+@section intellisense
+{
+    <script src="../../Scripts/jquery-1.4.4-vsdoc.js" type="text/javascript"></script>
+}
+
 <h2>Play</h2>
 
 @using (Html.BeginForm("Play", "Game", FormMethod.Post, new { autocomplete = "off" }))
@@ -30,4 +35,26 @@
     }
   </dl>
   }
+}
+
+@if (ViewBag.DebugInfo != null)
+{
+<div id="debug-container">
+    <a href="#" id="toggle-debug">debug info</a>
+    <dl id="debug-info" style="display : none;">
+      @foreach (var entry in ViewBag.DebugInfo)
+      {
+      <dt>@entry.Key</dt>
+      <dd>@entry.Value</dd>
+      }
+    </dl>
+</div>
+
+<script>
+    $(function () {
+        $("#toggle-debug").click(function () {
+            $("#debug-info").toggle();
+        });
+    });
+</script>
 }
