--- a/Therefore.Web/Views/Shared/_Layout.cshtml
+++ b/Therefore.Web/Views/Shared/_Layout.cshtml
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>@ViewBag.Title</title>
+    @{ WriteTo(TextWriter.Null, RenderSection("intellisense", required: false)); }
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.4.4.min.js")" type="text/javascript"></script>
+    @RenderSection("headers", required: false)
   </head>
   <body>
     @RenderBody()
