Updated the style of the rendered tree.

--- a/Therefore.Web/Views/Game/Play.cshtml
+++ b/Therefore.Web/Views/Game/Play.cshtml
@@ -28,13 +28,13 @@
         .variable-node, .binary-operator-node, .unary-operator-node, .parenthesis-node
         {
             display: inline-block;
-            border-bottom: 1px solid black;
-            margin: 2px;
-            margin-top: 0;
+            margin: 2px 5px;
+            border: 1px solid silver;
         }
 
         .variable-node
         {
+            font-weight: bold;
             border: none;
         }
     </style>
