--- a/Therefore.Web/Content/Site.css
+++ b/Therefore.Web/Content/Site.css
@@ -61,3 +61,16 @@ textarea
 {
     display: none;
 }
+
+.card
+{
+    font-family : Palatino Linotype, Serif;
+    border : double 3px #000000;
+    width : 60px;
+    height : 90px;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+}
