--- a/Therefore.Web/Views/Game/Card.cshtml
+++ b/Therefore.Web/Views/Game/Card.cshtml
@@ -9,7 +9,7 @@
         <span class="operator">@symbol</span><br />
         <span class="descriptor">Not</span>
     }
-    else if (symbol == "·")
+    else if (symbol == "•")
     {
         <span class="operator">@symbol</span><br />
         <span class="descriptor">And</span>
