Added a dark horizontal woodgrain background.

--- a/Therefore.Web/Views/Game/Play.cshtml
+++ b/Therefore.Web/Views/Game/Play.cshtml
@@ -36,3 +36,8 @@ The current player is @Model.CurrentPlayer.
     </li>
 }
 </ul>
+
+<div id="background">
+    <img src="@Url.Content("~/Content/dark-wood-1.jpg")" class="stretch" alt="" />
+</div>
+
