--- a/Therefore.Web/Content/Site.css
+++ b/Therefore.Web/Content/Site.css
@@ -3,8 +3,24 @@ body
     font-size: 75%;
     font-family: Verdana, Tahoma, Arial, "Helvetica Neue", Helvetica, Sans-Serif;
     color: #232323;
-    background-color: #fff;
 }
+
+#background
+{
+    width: 100%; 
+    height: 100%; 
+    position: fixed; 
+    left: 0px; 
+    top: 0px; 
+    z-index: -1;
+}
+
+.stretch
+{
+    width:100%;
+    height:100%;
+}
+
 
 fieldset
 {
