Added the style sheet "Play" and changed the font color for the game.

--- a/Therefore.Web/Views/Game/Play.cshtml
+++ b/Therefore.Web/Views/Game/Play.cshtml
@@ -8,6 +8,7 @@
 }
 @section headers
 {
+    <link href="@Url.Content("~/Content/Play.css")" rel="stylesheet" type="text/css" />
 }
 <h2>Play</h2>
 The current player is @Model.CurrentPlayer.
